# denoiser

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  split_dataset.py  test.py
playground/: best_model.pt  denoiser.py  mean_std.npz
src/: data.py  dsp.py  evaluate.py  model.py
